# docs/swagger.yaml
@@ -35,11 +35,6 @@ definitions:
     required:
     - email
     type: object
-  auth.ProfileStatusResponse:
-    properties:
-      perfil_completado:
-        type: boolean
-    type: object
   auth.ProfileUpdateRequest:
     properties:
       ano_ingreso:
@@ -182,11 +177,41 @@ paths:
       summary: Completar o actualizar perfil de usuario empresa
       tags:
       - profile
-  /login:
+  /login/company:
     post:
       consumes:
       - application/json
-      description: Autentica al usuario utilizando Firebase y devuelve un token
+      description: Autentica a una empresa y devuelve un token
+      parameters:
+      - description: Datos de inicio de sesión
+        in: body
+        name: company
+        required: true
+        schema:
+          $ref: '#/definitions/auth.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Inicio de sesión exitoso
+          schema:
+            $ref: '#/definitions/auth.LoginResponse'
+        "400":
+          description: Datos inválidos
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+        "401":
+          description: Credenciales incorrectas
+          schema:
+            $ref: '#/definitions/auth.ErrorResponse'
+      summary: Inicia sesión una empresa
+      tags:
+      - auth
+  /login/user:
+    post:
+      consumes:
+      - application/json
+      description: Autentica al usuario y devuelve un token
       parameters:
       - description: Datos de inicio de sesión
         in: body
@@ -243,38 +268,7 @@ paths:
       summary: Envía un correo de recuperación de contraseña
       tags:
       - password
-  /profile-status:
-    get:
-      description: Retorna si el perfil ha sido completado o no
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Estado del perfil
-          schema:
-            $ref: '#/definitions/auth.ProfileStatusResponse'
-        "400":
-          description: Datos inválidos
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-        "401":
-          description: Usuario no autenticado
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-        "500":
-          description: Error interno del servidor
-          schema:
-            $ref: '#/definitions/auth.ErrorResponse'
-      summary: Obtener estado del perfil
-      tags:
-      - profile
-  /register:
+  /register/user:
     post:
       consumes:
       - application/json
